'k폴드교차검증학습'

--- a/Model Selection 모듈 소개.ipynb
+++ b/Model Selection 모듈 소개.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "576a39a6",
+   "id": "57fe941d",
    "metadata": {},
    "source": [
     "### 교차 검증\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "caed5de9",
+   "id": "7343e79e",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8a96b413",
+   "id": "06679613",
    "metadata": {
     "scrolled": true
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29b06ab9",
+   "id": "50d7dc6d",
    "metadata": {},
    "source": [
     "- Straitified K 폴드"
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e5f7f2f6",
+   "id": "ad8620e9",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "404d399d",
+   "id": "d9708e3a",
    "metadata": {
     "scrolled": true
    },
@@ -466,8 +466,10 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d293d780",
-   "metadata": {},
+   "id": "918b00c5",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -524,6 +526,77 @@
     "    print('학습 레이블 데이터 분포:\\n', label_train.value_counts())\n",
     "    print('검증 레이블 데이터 분포:\\n', label_test.value_counts())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "4298e300",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\\1 교차 검증 정확도 :0.98, 학습 데이터 크기: 100: 검증 데이터 크기: 50\n",
+      "#1 검증 세트 인덱스:[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  50\n",
+      "  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66 100 101\n",
+      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115]\n",
+      "\n",
+      "\\2 교차 검증 정확도 :0.94, 학습 데이터 크기: 100: 검증 데이터 크기: 50\n",
+      "#2 검증 세트 인덱스:[ 17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  67\n",
+      "  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82 116 117 118\n",
+      " 119 120 121 122 123 124 125 126 127 128 129 130 131 132]\n",
+      "\n",
+      "\\3 교차 검증 정확도 :0.98, 학습 데이터 크기: 100: 검증 데이터 크기: 50\n",
+      "#3 검증 세트 인덱스:[ 34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  83  84\n",
+      "  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99 133 134 135\n",
+      " 136 137 138 139 140 141 142 143 144 145 146 147 148 149]\n",
+      "\n",
+      "## 교차 검증별 정확도 [0.98 0.94 0.98]\n",
+      "\n",
+      "## 평균 검증 정확도: 0.9666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_clf = DecisionTreeClassifier(random_state=156)\n",
+    "\n",
+    "skfold = StratifiedKFold(n_splits=3)\n",
+    "n_iter=0\n",
+    "cv_accuracy=[]\n",
+    "\n",
+    "# StratifiedKFold의 split() 호출 시 반드시 레이블 데이터 셋도 추가 입력 필요\n",
+    "for train_index, test_index in skfold.split(features, label):\n",
+    "    # kfold.split()으로 반환된 인덱스를 이용하여 학습용, 검증용 테스트 데이터 추출\n",
+    "    X_train, X_test = features[train_index], features[test_index]\n",
+    "    y_train, y_test = label[train_index], label[test_index]\n",
+    "    \n",
+    "    # 학습 및 예측\n",
+    "    dt_clf.fit(X_train, y_train)\n",
+    "    pred = dt_clf.predict(X_test)\n",
+    "    n_iter += 1\n",
+    "    \n",
+    "    accuracy = np.round(accuracy_score(y_test, pred), 4)\n",
+    "    train_size = X_train.shape[0]\n",
+    "    test_size = X_test.shape[0]\n",
+    "    print('\\n\\{0} 교차 검증 정확도 :{1}, 학습 데이터 크기: {2}: 검증 데이터 크기: {3}'.format(n_iter, accuracy, train_size, test_size))\n",
+    "    print('#{0} 검증 세트 인덱스:{1}'.format(n_iter, test_index))\n",
+    "    \n",
+    "    cv_accuracy.append(accuracy)\n",
+    "    \n",
+    "# 개별 iteration별 정확도를 합하여 평균 정확도 계산\n",
+    "print('\\n## 교차 검증별 정확도', np.round(cv_accuracy, 4))\n",
+    "print('\\n## 평균 검증 정확도:', np.mean(cv_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcffa5d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
