--- a/Model Selection 모듈 소개.ipynb
+++ b/Model Selection 모듈 소개.ipynb
@@ -12,7 +12,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
+   "id": "45dbfe78-414a-45b6-a81a-0b69244f981f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3435471434.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip install scikit-learn\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dc61d3d4-6da5-48b6-a5ad-db1675dcb3b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Downloading pandas-2.2.2-cp312-cp312-macosx_11_0_arm64.whl.metadata (19 kB)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Downloading pytz-2024.1-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Downloading tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Downloading pandas-2.2.2-cp312-cp312-macosx_11_0_arm64.whl (11.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.3/11.3 MB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m505.5/505.5 kB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m345.4/345.4 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.2.2 pytz-2024.1 tzdata-2024.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4460661-a497-443f-9811-6c4a0810f0a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "2f81c36b",
    "metadata": {},
    "outputs": [
@@ -42,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "92111dea",
    "metadata": {},
    "outputs": [],
@@ -60,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "aa9d4c2f",
    "metadata": {},
    "outputs": [
@@ -88,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "9d613ad3",
    "metadata": {},
    "outputs": [
@@ -181,7 +243,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "ac871557",
    "metadata": {},
    "outputs": [
@@ -214,7 +276,7 @@
        "147    2\n",
        "148    2\n",
        "149    2\n",
-       "Name: target, Length: 150, dtype: int32"
+       "Name: target, Length: 150, dtype: int64"
       ]
      },
      "metadata": {},
@@ -232,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "85542832",
    "metadata": {},
    "outputs": [
@@ -250,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "a2e8e429",
    "metadata": {},
    "outputs": [
@@ -281,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "7343e79e",
    "metadata": {},
    "outputs": [
@@ -313,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "06679613",
    "metadata": {
     "scrolled": true
@@ -343,7 +405,18 @@
       "\\5 교차 검증 정확도 :0.7333, 학습 데이터 크기: 120: 검증 데이터 크기: 30\n",
       "#5 검증 세트 인덱스:[120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137\n",
       " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
-      "#n## 평균 검증 정확도: 0.9\n"
+      "\n",
+      "## 평균 검증 정확도: 0.9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:17: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "<>:17: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "/var/folders/gf/nc7rtlj96kx5p_9bsn3phypc0000gn/T/ipykernel_7519/3320222082.py:17: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "  print('\\n\\{0} 교차 검증 정확도 :{1}, 학습 데이터 크기: {2}: 검증 데이터 크기: {3}'.format(n_iter, accuracy, train_size, test_size))\n"
      ]
     }
    ],
@@ -383,20 +456,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "ad8620e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "label\n",
        "0    50\n",
        "1    50\n",
        "2    50\n",
-       "Name: label, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "d9708e3a",
    "metadata": {
     "scrolled": true
@@ -425,28 +499,34 @@
      "text": [
       "## 교차 검증: 1\n",
       "학습 레이블 데이터 분포:\n",
-      " 1    50\n",
+      " label\n",
+      "1    50\n",
       "2    50\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
-      " 0    50\n",
-      "Name: label, dtype: int64\n",
+      " label\n",
+      "0    50\n",
+      "Name: count, dtype: int64\n",
       "## 교차 검증: 2\n",
       "학습 레이블 데이터 분포:\n",
-      " 0    50\n",
+      " label\n",
+      "0    50\n",
       "2    50\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
-      " 1    50\n",
-      "Name: label, dtype: int64\n",
+      " label\n",
+      "1    50\n",
+      "Name: count, dtype: int64\n",
       "## 교차 검증: 3\n",
       "학습 레이블 데이터 분포:\n",
-      " 0    50\n",
+      " label\n",
+      "0    50\n",
       "1    50\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
-      " 2    50\n",
-      "Name: label, dtype: int64\n"
+      " label\n",
+      "2    50\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -465,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "918b00c5",
    "metadata": {
     "scrolled": true
@@ -477,37 +557,43 @@
      "text": [
       "## 교차 검증: 1\n",
       "학습 레이블 데이터 분포:\n",
-      " 2    34\n",
+      " label\n",
+      "2    34\n",
       "0    33\n",
       "1    33\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
-      " 0    17\n",
+      " label\n",
+      "0    17\n",
       "1    17\n",
       "2    16\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "## 교차 검증: 2\n",
       "학습 레이블 데이터 분포:\n",
-      " 1    34\n",
+      " label\n",
+      "1    34\n",
       "0    33\n",
       "2    33\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
-      " 0    17\n",
+      " label\n",
+      "0    17\n",
       "2    17\n",
       "1    16\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "## 교차 검증: 3\n",
       "학습 레이블 데이터 분포:\n",
-      " 0    34\n",
+      " label\n",
+      "0    34\n",
       "1    33\n",
       "2    33\n",
-      "Name: label, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
-      " 1    17\n",
+      " label\n",
+      "1    17\n",
       "2    17\n",
       "0    16\n",
-      "Name: label, dtype: int64\n"
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -529,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "4298e300",
    "metadata": {},
    "outputs": [
@@ -538,17 +624,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\\1 교차 검증 정확도 :0.98, 학습 데이터 크기: 100: 검증 데이터 크기: 50\n",
+      "1 교차 검증 정확도 :0.98, 학습 데이터 크기: 100: 검증 데이터 크기: 50\n",
       "#1 검증 세트 인덱스:[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  50\n",
       "  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66 100 101\n",
       " 102 103 104 105 106 107 108 109 110 111 112 113 114 115]\n",
       "\n",
-      "\\2 교차 검증 정확도 :0.94, 학습 데이터 크기: 100: 검증 데이터 크기: 50\n",
+      "2 교차 검증 정확도 :0.94, 학습 데이터 크기: 100: 검증 데이터 크기: 50\n",
       "#2 검증 세트 인덱스:[ 17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  67\n",
       "  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82 116 117 118\n",
       " 119 120 121 122 123 124 125 126 127 128 129 130 131 132]\n",
       "\n",
-      "\\3 교차 검증 정확도 :0.98, 학습 데이터 크기: 100: 검증 데이터 크기: 50\n",
+      "3 교차 검증 정확도 :0.98, 학습 데이터 크기: 100: 검증 데이터 크기: 50\n",
       "#3 검증 세트 인덱스:[ 34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  83  84\n",
       "  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99 133 134 135\n",
       " 136 137 138 139 140 141 142 143 144 145 146 147 148 149]\n",
@@ -580,7 +666,7 @@
     "    accuracy = np.round(accuracy_score(y_test, pred), 4)\n",
     "    train_size = X_train.shape[0]\n",
     "    test_size = X_test.shape[0]\n",
-    "    print('\\n\\{0} 교차 검증 정확도 :{1}, 학습 데이터 크기: {2}: 검증 데이터 크기: {3}'.format(n_iter, accuracy, train_size, test_size))\n",
+    "    print('\\n{0} 교차 검증 정확도 :{1}, 학습 데이터 크기: {2}: 검증 데이터 크기: {3}'.format(n_iter, accuracy, train_size, test_size))\n",
     "    print('#{0} 검증 세트 인덱스:{1}'.format(n_iter, test_index))\n",
     "    \n",
     "    cv_accuracy.append(accuracy)\n",
@@ -615,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
