--- a/Model Selection 모듈 소개.ipynb
+++ b/Model Selection 모듈 소개.ipynb
@@ -682,7 +682,22 @@
    "id": "fcffa5d7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.datasets import load_iris\n",
+    "\n",
+    "iris_data = load_iris()\n",
+    "dt_clf = DecisionTreeClassifier(random_state=156)\n",
+    "\n",
+    "data - iris_data.data\n",
+    "label = iris_data.target\n",
+    "\n",
+    "# 성능 지표는 정확도 (accuracy), 교차 검증 세트는 3개\n",
+    "scores = cross_val_score(dt_clf, data, label, scoring='accuracy', cv=3)\n",
+    "#print(scores, type(scores))\n",
+    "print('교차 검증법 정확도', n\n"
+   ]
   }
  ],
  "metadata": {
