--- a/Model Selection 모듈 소개.ipynb
+++ b/Model Selection 모듈 소개.ipynb
@@ -679,9 +679,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcffa5d7",
+   "id": "19338a33-e1bc-41e7-8a0b-cca74c1e0f86",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fcffa5d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "교차 검증법 정확도 [0.98 0.94 0.98]\n",
+      "평균 검증 정확도 0.9667\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
@@ -690,13 +707,80 @@
     "iris_data = load_iris()\n",
     "dt_clf = DecisionTreeClassifier(random_state=156)\n",
     "\n",
-    "data - iris_data.data\n",
+    "data = iris_data.data\n",
     "label = iris_data.target\n",
     "\n",
     "# 성능 지표는 정확도 (accuracy), 교차 검증 세트는 3개\n",
     "scores = cross_val_score(dt_clf, data, label, scoring='accuracy', cv=3)\n",
     "#print(scores, type(scores))\n",
-    "print('교차 검증법 정확도', n\n"
+    "print('교차 검증법 정확도', np.round(scores, 4))\n",
+    "print('평균 검증 정확도', np.round(np.mean(scores), 4))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9aef6ee0-bcab-4149-907b-f0ce7c420c3d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebce3ad9-5e44-43aa-91a9-1d7fb3af1dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a8313f9-02de-4746-b862-c8b746a427b9",
+   "metadata": {},
+   "source": [
+    "- GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "974a8365-61ef-4abc-aebb-5f7e9cc01980",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# 데이터를 로딩하 학습데이터와 테스 데이터 분리\n",
+    "iris = load_iris()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(iris_data.data, iris_data.target, test_size=0.2, random_state=121)\n",
+    "\n",
+    "dtree = DecisionTreeClassifier()\n",
+    "\n",
+    "### parameter 들을 dictionary 형태로 설정\n",
+    "parameters = {'max_depth':[1, 2, 3], 'min_samples_split':[2,3]}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d90d1dd7-d11f-49af-9fe1-33de39708af8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "# param_grid의 하이 파라미터들을 3개의 train, test set fold 로 나누어 테스 수행 설정, \n",
+    "### refit=True 가 default임. True이면 가장 좋은 파라미 설정으로 재학습시킴.\n",
+    "grid_dtree = GridSearchCV(dtree, param_grid=parameters, cv=3, refit=True, return_train_score=True)\n",
+    "\n",
+    "# 붓꽃 Train 데이터 param_grid의 하이 파라미터들을 순차적으 학습/평가\n",
+    "grid_dtree.fit(X_train, y_train)\n",
+    "\n",
+    "# GridSearchCV 결과는 cv_results_ 라는 딕셔너리 저장됨. 이를 DataFrame으 변환\n",
+    "scores_df = pd.DataFrame(grid_dtree.cv_results_)\n",
+    "scores_df[['params', 'mean_test_score', 'rank_test_score', \n",
+    "\n"
    ]
   }
  ],
