--- a/Model Selection 모듈 소개.ipynb
+++ b/Model Selection 모듈 소개.ipynb
@@ -12,16 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "45dbfe78-414a-45b6-a81a-0b69244f981f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3435471434.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip install scikit-learn\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (1.5.0)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from scikit-learn) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from scikit-learn) (1.13.1)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from scikit-learn) (3.5.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -31,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "dc61d3d4-6da5-48b6-a5ad-db1675dcb3b6",
    "metadata": {},
    "outputs": [
@@ -39,23 +43,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pandas\n",
-      "  Downloading pandas-2.2.2-cp312-cp312-macosx_11_0_arm64.whl.metadata (19 kB)\n",
+      "Requirement already satisfied: pandas in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (2.2.2)\n",
       "Requirement already satisfied: numpy>=1.26.0 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from pandas) (1.26.4)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Downloading pytz-2024.1-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Downloading tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from pandas) (2024.1)\n",
       "Requirement already satisfied: six>=1.5 in /opt/homebrew/Cellar/jupyterlab/4.2.1/libexec/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Downloading pandas-2.2.2-cp312-cp312-macosx_11_0_arm64.whl (11.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.3/11.3 MB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m505.5/505.5 kB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m345.4/345.4 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pytz, tzdata, pandas\n",
-      "Successfully installed pandas-2.2.2 pytz-2024.1 tzdata-2024.1\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -74,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2f81c36b",
    "metadata": {},
    "outputs": [
@@ -104,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "92111dea",
    "metadata": {},
    "outputs": [],
@@ -122,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "aa9d4c2f",
    "metadata": {},
    "outputs": [
@@ -150,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9d613ad3",
    "metadata": {},
    "outputs": [
@@ -243,7 +236,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ac871557",
    "metadata": {},
    "outputs": [
@@ -294,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "85542832",
    "metadata": {},
    "outputs": [
@@ -312,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a2e8e429",
    "metadata": {},
    "outputs": [
@@ -343,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "7343e79e",
    "metadata": {},
    "outputs": [
@@ -375,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "06679613",
    "metadata": {
     "scrolled": true
@@ -415,7 +408,7 @@
      "text": [
       "<>:17: SyntaxWarning: invalid escape sequence '\\{'\n",
       "<>:17: SyntaxWarning: invalid escape sequence '\\{'\n",
-      "/var/folders/gf/nc7rtlj96kx5p_9bsn3phypc0000gn/T/ipykernel_7519/3320222082.py:17: SyntaxWarning: invalid escape sequence '\\{'\n",
+      "/var/folders/gf/nc7rtlj96kx5p_9bsn3phypc0000gn/T/ipykernel_11117/3320222082.py:17: SyntaxWarning: invalid escape sequence '\\{'\n",
       "  print('\\n\\{0} 교차 검증 정확도 :{1}, 학습 데이터 크기: {2}: 검증 데이터 크기: {3}'.format(n_iter, accuracy, train_size, test_size))\n"
      ]
     }
@@ -456,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "ad8620e9",
    "metadata": {},
    "outputs": [
@@ -470,7 +463,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d9708e3a",
    "metadata": {
     "scrolled": true
@@ -545,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "918b00c5",
    "metadata": {
     "scrolled": true
@@ -615,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "4298e300",
    "metadata": {},
    "outputs": [
@@ -686,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "fcffa5d7",
    "metadata": {},
    "outputs": [
@@ -741,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "974a8365-61ef-4abc-aebb-5f7e9cc01980",
    "metadata": {},
    "outputs": [],
@@ -763,10 +756,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d90d1dd7-d11f-49af-9fe1-33de39708af8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>params</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <th>rank_test_score</th>\n",
+       "      <th>split0_test_score</th>\n",
+       "      <th>split1_test_score</th>\n",
+       "      <th>split2_test_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'max_depth': 1, 'min_samples_split': 2}</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.700</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'max_depth': 1, 'min_samples_split': 3}</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.700</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'max_depth': 2, 'min_samples_split': 2}</td>\n",
+       "      <td>0.958333</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.925</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'max_depth': 2, 'min_samples_split': 3}</td>\n",
+       "      <td>0.958333</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.925</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'max_depth': 3, 'min_samples_split': 2}</td>\n",
+       "      <td>0.975000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.975</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>{'max_depth': 3, 'min_samples_split': 3}</td>\n",
+       "      <td>0.975000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.975</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     params  mean_test_score  rank_test_score  \\\n",
+       "0  {'max_depth': 1, 'min_samples_split': 2}         0.700000                5   \n",
+       "1  {'max_depth': 1, 'min_samples_split': 3}         0.700000                5   \n",
+       "2  {'max_depth': 2, 'min_samples_split': 2}         0.958333                3   \n",
+       "3  {'max_depth': 2, 'min_samples_split': 3}         0.958333                3   \n",
+       "4  {'max_depth': 3, 'min_samples_split': 2}         0.975000                1   \n",
+       "5  {'max_depth': 3, 'min_samples_split': 3}         0.975000                1   \n",
+       "\n",
+       "   split0_test_score  split1_test_score  split2_test_score  \n",
+       "0              0.700                0.7               0.70  \n",
+       "1              0.700                0.7               0.70  \n",
+       "2              0.925                1.0               0.95  \n",
+       "3              0.925                1.0               0.95  \n",
+       "4              0.975                1.0               0.95  \n",
+       "5              0.975                1.0               0.95  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "\n",
@@ -780,7 +884,87 @@
     "# GridSearchCV 결과는 cv_results_ 라는 딕셔너리 저장됨. 이를 DataFrame으 변환\n",
     "scores_df = pd.DataFrame(grid_dtree.cv_results_)\n",
     "scores_df[['params', 'mean_test_score', 'rank_test_score', \n",
-    "\n"
+    "           'split0_test_score', 'split1_test_score', 'split2_test_score']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ddd13185-6bda-4668-8e54-971824ef2af2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean_fit_time': array([0.00018231, 0.00013216, 0.00014456, 0.00014774, 0.00014536,\n",
+       "        0.00017508]),\n",
+       " 'std_fit_time': array([3.59289407e-05, 1.57348234e-06, 4.60805544e-06, 1.18944085e-06,\n",
+       "        5.45880787e-06, 1.61484470e-05]),\n",
+       " 'mean_score_time': array([0.00012374, 0.000103  , 0.00010864, 0.00010896, 0.00011468,\n",
+       "        0.00011889]),\n",
+       " 'std_score_time': array([1.52972353e-05, 7.01885292e-07, 2.65729483e-06, 1.55734364e-06,\n",
+       "        1.67719746e-05, 6.30595984e-06]),\n",
+       " 'param_max_depth': masked_array(data=[1, 1, 2, 2, 3, 3],\n",
+       "              mask=[False, False, False, False, False, False],\n",
+       "        fill_value=999999),\n",
+       " 'param_min_samples_split': masked_array(data=[2, 3, 2, 3, 2, 3],\n",
+       "              mask=[False, False, False, False, False, False],\n",
+       "        fill_value=999999),\n",
+       " 'params': [{'max_depth': 1, 'min_samples_split': 2},\n",
+       "  {'max_depth': 1, 'min_samples_split': 3},\n",
+       "  {'max_depth': 2, 'min_samples_split': 2},\n",
+       "  {'max_depth': 2, 'min_samples_split': 3},\n",
+       "  {'max_depth': 3, 'min_samples_split': 2},\n",
+       "  {'max_depth': 3, 'min_samples_split': 3}],\n",
+       " 'split0_test_score': array([0.7  , 0.7  , 0.925, 0.925, 0.975, 0.975]),\n",
+       " 'split1_test_score': array([0.7, 0.7, 1. , 1. , 1. , 1. ]),\n",
+       " 'split2_test_score': array([0.7 , 0.7 , 0.95, 0.95, 0.95, 0.95]),\n",
+       " 'mean_test_score': array([0.7       , 0.7       , 0.95833333, 0.95833333, 0.975     ,\n",
+       "        0.975     ]),\n",
+       " 'std_test_score': array([1.11022302e-16, 1.11022302e-16, 3.11804782e-02, 3.11804782e-02,\n",
+       "        2.04124145e-02, 2.04124145e-02]),\n",
+       " 'rank_test_score': array([5, 5, 3, 3, 1, 1], dtype=int32),\n",
+       " 'split0_train_score': array([0.7   , 0.7   , 0.975 , 0.975 , 0.9875, 0.9875]),\n",
+       " 'split1_train_score': array([0.7   , 0.7   , 0.9375, 0.9375, 0.9625, 0.9625]),\n",
+       " 'split2_train_score': array([0.7   , 0.7   , 0.9625, 0.9625, 0.9875, 0.9875]),\n",
+       " 'mean_train_score': array([0.7       , 0.7       , 0.95833333, 0.95833333, 0.97916667,\n",
+       "        0.97916667]),\n",
+       " 'std_train_score': array([1.11022302e-16, 1.11022302e-16, 1.55902391e-02, 1.55902391e-02,\n",
+       "        1.17851130e-02, 1.17851130e-02])}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_dtree.cv_results_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6fc67f67-4aef-4fd1-b2c8-0b91101a1b00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GridSearchCV 최적 파라미 {'max_depth': 3, 'min_samples_split': 2}\n",
+      "GridSearchCV 최고 정확도:  0.9750\n",
+      "테스트 데이터 정확도:  0.9667\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('GridSearchCV 최적 파라미', grid_dtree.best_params_)\n",
+    "print('GridSearchCV 최고 정확도: {0: .4f}'.format(grid_dtree.best_score_))\n",
+    "\n",
+    "# refit=True 로 설정된 GridSearchCV 객체가 fit()을 수행 시 학습이 완료된 Estimator를 내포하고 있으므 predict()를 통해 예측도 가능.\n",
+    "pred = grid_dtree.predict(X_test)\n",
+    "print('테스트 데이터 정확도: {0: .4f}'.format(accuracy_score(y_test, pred)))"
    ]
   }
  ],
