--- a/2.5 데이터 전처리.ipynb
+++ b/2.5 데이터 전처리.ipynb
@@ -111,10 +111,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "a5b6aa09-13ad-4ff6-bf74-de85d6708c49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원-핫 인코딩 데이터\n",
+      "[[1. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]]\n",
+      "원-핫 인코딩 데이터 처리\n",
+      "(8, 6)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "import numpy as np\n",
@@ -129,8 +147,20 @@
     "oh_encoder.fit(items)\n",
     "oh_labels = oh_encoder.transform(items)\n",
     "\n",
-    "# OneHotEncoder로 변환한 결과는 Sparse 행렬(희 행렬)이므 이를 Dense 형"
+    "# OneHotEncoder로 변환한 결과는 Sparse 행렬(희 행렬)이므 이를 Dense 행렬로 변환\n",
+    "print('원-핫 인코딩 데이터')\n",
+    "print(oh_labels.toarray())\n",
+    "print('원-핫 인코딩 데이터 처리')\n",
+    "print(oh_labels.shape)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66bad5f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -149,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
