--- a/2.5 데이터 전처리.ipynb
+++ b/2.5 데이터 전처리.ipynb
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d0805d44-d9c7-438a-823e-a893b1fd1d2d",
+   "execution_count": 2,
+   "id": "73fb223d",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "528acbcb-42ef-49ee-87b3-3588d7aa2987",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "eb1d5f01-1bcc-47a1-ac3e-2f2e29373e3a",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "bc7954f6-da17-4c39-ac65-c9096ee8e5f9",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "       ['믹서']], dtype='<U4')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "a5b6aa09-13ad-4ff6-bf74-de85d6708c49",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
       " [0. 0. 0. 1. 0. 0.]\n",
       " [0. 0. 1. 0. 0. 0.]\n",
       " [0. 0. 1. 0. 0. 0.]]\n",
-      "원-핫 인코딩 데이터 처리\n",
+      "원-핫 인코딩 데이터 차원\n",
       "(8, 6)\n"
      ]
     }
@@ -150,246 +150,313 @@
     "# OneHotEncoder로 변환한 결과는 Sparse 행렬(희 행렬)이므 이를 Dense 행렬로 변환\n",
     "print('원-핫 인코딩 데이터')\n",
     "print(oh_labels.toarray())\n",
-    "print('원-핫 인코딩 데이터 처리')\n",
+    "print('원-핫 인코딩 데이터 차원')\n",
     "print(oh_labels.shape)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4c11d59a",
+   "cell_type": "markdown",
+   "id": "b5eec073",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>TV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>냉장고</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>전자렌지</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>컴퓨터</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>선풍기</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>선풍기</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>믹서</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>믹서</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   item\n",
-       "0    TV\n",
-       "1   냉장고\n",
-       "2  전자렌지\n",
-       "3   컴퓨터\n",
-       "4   선풍기\n",
-       "5   선풍기\n",
-       "6    믹서\n",
-       "7    믹서"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "import pandas as pd\n",
+    "## 피쳐 스케일링과 정규화\n",
     "\n",
-    "df = pd.DataFrame({\n",
-    "    'item' : ['TV', '냉장고', '전자렌지', '컴퓨터', '선풍기', '선풍기', '믹서', '믹서']\n",
-    "})\n",
-    "\n",
-    "df"
+    "- StandardScalar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "183e56f3",
+   "execution_count": 10,
+   "id": "f2c86d52",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_TV</th>\n",
-       "      <th>item_냉장고</th>\n",
-       "      <th>item_믹서</th>\n",
-       "      <th>item_선풍기</th>\n",
-       "      <th>item_전자렌지</th>\n",
-       "      <th>item_컴퓨터</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   item_TV  item_냉장고  item_믹서  item_선풍기  item_전자렌지  item_컴퓨터\n",
-       "0        1         0        0         0          0         0\n",
-       "1        0         1        0         0          0         0\n",
-       "2        0         0        0         0          1         0\n",
-       "3        0         0        0         0          0         1\n",
-       "4        0         0        0         1          0         0\n",
-       "5        0         0        0         1          0         0\n",
-       "6        0         0        1         0          0         0\n",
-       "7        0         0        1         0          0         0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature 들의 평균 값\n",
+      "sepal length (cm)    5.843333\n",
+      "sepal width (cm)     3.057333\n",
+      "petal length (cm)    3.758000\n",
+      "petal width (cm)     1.199333\n",
+      "dtype: float64\n",
+      "\n",
+      "feature 들의 분산 값\n",
+      "sepal length (cm)    0.685694\n",
+      "sepal width (cm)     0.189979\n",
+      "petal length (cm)    3.116278\n",
+      "petal width (cm)     0.581006\n",
+      "dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "ohe_df = pd.get_dummies(df)\n",
+    "from sklearn.datasets import load_iris\n",
+    "import pandas as pd\n",
     "\n",
-    "ohe_df"
+    "# 붓꽃 데이터 셋을 로딩하고 DataFrame으로 변환합니다\n",
+    "iris = load_iris()\n",
+    "iris_data = iris.data\n",
+    "iris_df = pd.DataFrame(data=iris_data, columns=iris.feature_names)\n",
+    "\n",
+    "print('feature 들의 평균 값')\n",
+    "print(iris_df.mean())\n",
+    "print('\\nfeature 들의 분산 값')\n",
+    "print(iris_df.var())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "219254e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature 들의 평균 값\n",
+      "sepal length (cm)   -1.690315e-15\n",
+      "sepal width (cm)    -1.842970e-15\n",
+      "petal length (cm)   -1.698641e-15\n",
+      "petal width (cm)    -1.409243e-15\n",
+      "dtype: float64\n",
+      "\n",
+      "feature 들의 분산 값\n",
+      "sepal length (cm)    1.006711\n",
+      "sepal width (cm)     1.006711\n",
+      "petal length (cm)    1.006711\n",
+      "petal width (cm)     1.006711\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# StandardScaler 객체 생성\n",
+    "scaler = StandardScaler()\n",
+    "# StandardScaler 로 데이터 셋 변환. fit() 과 transform() 호출.\n",
+    "scaler.fit(iris_df)\n",
+    "iris_scaled = scaler.transform(iris_df)\n",
+    "\n",
+    "# transform() 시 scaler 변환된 데이터 셋이 numpy ndarray로 반환되어 이를 DataFrame으로 변환\n",
+    "iris_df_scaled = pd.DataFrame(data=iris_scaled, columns=iris.feature_names)\n",
+    "\n",
+    "print('feature 들의 평균 값')\n",
+    "print(iris_df_scaled.mean())\n",
+    "print('\\nfeature 들의 분산 값')\n",
+    "print(iris_df_scaled.var())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "07c0097b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature 들의 평균 값\n",
+      "sepal length (cm)   -1.690315e-15\n",
+      "sepal width (cm)    -1.842970e-15\n",
+      "petal length (cm)   -1.698641e-15\n",
+      "petal width (cm)    -1.409243e-15\n",
+      "dtype: float64\n",
+      "\n",
+      "feature 들의 분산 값\n",
+      "sepal length (cm)    1.006711\n",
+      "sepal width (cm)     1.006711\n",
+      "petal length (cm)    1.006711\n",
+      "petal width (cm)     1.006711\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# StandardScaler 객체 생성\n",
+    "scaler = StandardScaler()\n",
+    "# StandardScaler 로 데이터 셋 변환. fit() 과 transform() 호출.\n",
+    "iris_scaled = scaler.fit_transform(iris_df)\n",
+    "\n",
+    "# transform() 시 scaler 변환된 데이터 셋이 numpy ndarray로 반환되어 이를 DataFrame으로 변환\n",
+    "iris_df_scaled = pd.DataFrame(data=iris_scaled, columns=iris.feature_names)\n",
+    "\n",
+    "print('feature 들의 평균 값')\n",
+    "print(iris_df_scaled.mean())\n",
+    "print('\\nfeature 들의 분산 값')\n",
+    "print(iris_df_scaled.var())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4fa7416e",
+   "id": "f72d4765",
    "metadata": {},
    "source": [
-    "### 피처 스케일링과 정규화"
+    "- MinMaxScaler"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1e759612",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature 들의 평균 값\n",
+      "sepal length (cm)    0.428704\n",
+      "sepal width (cm)     0.440556\n",
+      "petal length (cm)    0.467458\n",
+      "petal width (cm)     0.458056\n",
+      "dtype: float64\n",
+      "\n",
+      "feature 들의 분산 값\n",
+      "sepal length (cm)    0.052908\n",
+      "sepal width (cm)     0.032983\n",
+      "petal length (cm)    0.089522\n",
+      "petal width (cm)     0.100869\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# MinMaxScaler 객체 생성\n",
+    "scaler = MinMaxScaler()\n",
+    "# MinMaxScaler 로 데이터 셋 변환. fit()과 transform() 호출\n",
+    "iris_scaled = scaler.fit_transform(iris_df)\n",
+    "\n",
+    "# transform() 시 scaler 변환된 데이터 셋이 numpy ndarray로 반환되어 이를 DataFrame으로 변환\n",
+    "iris_df_scaled = pd.DataFrame(data=iris_scaled, columns=iris.feature_names)\n",
+    "\n",
+    "print('feature 들의 평균 값')\n",
+    "print(iris_df_scaled.mean())\n",
+    "print('\\nfeature 들의 분산 값')\n",
+    "print(iris_df_scaled.var())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be377a25",
+   "metadata": {},
+   "source": [
+    "- Scaler 를 이용하여 학습 데이터와 테스트 데이터에 fit(). transform(), fir_transform() 적용 시 유의사항"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "493bf75b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# 학습 데이터는 0부터 10까지, 테스트 데이터는 0부터 5까지 값을 가지는 데이터 세트로 생성\n",
+    "# Scaler 클래스의 fit(), tranform()은 2차원 이상의 데이터만 가능하므로 reshape(-1, 1)로 차원 변경\n",
+    "train_array = np.arange(0, 11).reshape(-1, 1)\n",
+    "test_array = np.arange(0, 6).reshape(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "18f44c2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본 train_array 데이터: [ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "Scale된 train_array데이터: [0.  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 최소값 0, 최대값 1로 변환하는 MinMaxScaler객체 생성\n",
+    "scaler = MinMaxScaler()\n",
+    "# fit()하게 되면 train_array 데이터의 최소값이 0, 최대값이 10으로 설정\n",
+    "scaler.fit(train_array)\n",
+    "# 1/10 scale로 train_array 데이터 변환함. 원본 10->1로 변환됨.\n",
+    "train_scaled = scaler.transform(train_array)\n",
+    "\n",
+    "print('원본 train_array 데이터:', np.round(train_array.reshape(-1), 2))\n",
+    "print('Scale된 train_array데이터:', np.round(train_scaled.reshape(-1), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1b047b53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본 test_array 데이터: [0 1 2 3 4 5]\n",
+      "Scale된 test_array데이터: [0.  0.2 0.4 0.6 0.8 1. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fit()하게 되면 test_array 데이터의 최소값이 0, 최대값이 5으로 설정\n",
+    "scaler.fit(test_array)\n",
+    "# 1/5 scale로 test_array 데이터 변환함. 원본 5->1로 변환됨.\n",
+    "test_scaled = scaler.transform(test_array)\n",
+    "\n",
+    "print('원본 test_array 데이터:', np.round(test_array.reshape(-1), 2))\n",
+    "print('Scale된 test_array데이터:', np.round(test_scaled.reshape(-1), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "823e8974",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본 train_array 데이터: [ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "Scale된 train_array데이터: [0.  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1. ]\n",
+      "\n",
+      "원본 test_array 데이터: [0 1 2 3 4 5]\n",
+      "Scale된 test_array데이터: [0.  0.1 0.2 0.3 0.4 0.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "scaler.fit(train_array)\n",
+    "train_scaled = scaler.transform(train_array)\n",
+    "print('원본 train_array 데이터:', np.round(train_array.reshape(-1), 2))\n",
+    "print('Scale된 train_array데이터:', np.round(train_scaled.reshape(-1), 2))\n",
+    "\n",
+    "# test_array에 Scale 변환을 할 때는 반드시 fit()을 호출하지 않고 transform() 만으로 변환해야 함.\n",
+    "test_scaled = scaler.transform(test_array)\n",
+    "print('\\n원본 test_array 데이터:', np.round(test_array.reshape(-1), 2))\n",
+    "print('Scale된 test_array데이터:', np.round(test_scaled.reshape(-1), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b87b295e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -408,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
